--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,24 @@
 # CMakeLists.txt
 cmake_minimum_required(VERSION 3.1.0)
 
+file(STRINGS "${CMAKE_SOURCE_DIR}/makespec/VERSION" VERSION)
+file(STRINGS "${CMAKE_SOURCE_DIR}/makespec/BUILDVERSION" BUILD_VERSION)
+file(STRINGS "${CMAKE_SOURCE_DIR}/makespec/VERSIONSUFFIX" VERSION_SUFFIX)
+
+set(VERSION_STRING "${VERSION}${VERSION_SUFFIX}")
 project(notepanda)
+
+set(VERSION_LIST ${VERSION})
+string(REPLACE "." ";" VERSION_LIST ${VERSION_LIST})
+separate_arguments(VERSION_LIST)
+
+list(GET VERSION_LIST 0 CMAKE_PROJECT_VERSION_MAJOR)
+list(GET VERSION_LIST 1 CMAKE_PROJECT_VERSION_MINOR)
+list(GET VERSION_LIST 2 CPACK_PACKAGE_VERSION_PATCH)
+
+
+add_definitions(-DVERSION_STRING="${VERSION_STRING}")
+add_definitions(-DXTOSTRUCT_QT)
 
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
@@ -10,6 +27,25 @@ set(CMAKE_AUTOUIC ON)
 if(CMAKE_VERSION VERSION_LESS "3.7.0")
     set(CMAKE_INCLUDE_CURRENT_DIR ON)
 endif()
+
+message(" ")
+message("Notepanda Version: ${VERSION_STRING}")
+message("Notepanda Build Version: ${BUILD_VERSION}")
+message("|-------------------------------------------------|")
+message("| Notepanda, A Cross Platform Notepad.            |")
+message("| Based on C++ & Qt.                              |")
+message("| Licenced under MIT                              |")
+message("|                                                 |")
+message("| You may only use this program to the extent     |")
+message("| permitted by local law.                         |")
+message("|                                                 |")
+message("| See: https://opensource.org/licenses/MIT        |")
+message("|-------------------------------------------------|")
+message("| GitHub: https://github.com/ChungZH/notepanda    |")
+message("| Welcome to contribute!                          |")
+message("|-------------------------------------------------|")
+message(" ")
+
 
 find_package(Qt5 COMPONENTS Widgets REQUIRED)
 
@@ -33,7 +69,5 @@ add_executable(notepanda
     ${GUI_TYPE}
     ${SOURCES}
 )
-
-set(CMAKE_BUILD_TYPE Release)
 
 target_link_libraries(notepanda Qt5::Widgets)
