--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,8 @@ jobs:
             arch: x86
     runs-on: ubuntu-latest
     steps:
+    - name: Checking out sources
+      uses: actions/checkout@master
     - name: Cache Qt
       id: cache-qt
       uses: actions/cache@v1
