--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake .. -DCMAKE_BUILD_TYPE=Release
+        cmake .. -DCMAKE_INSTALL_PREFIX=./AppDir/usr -DCMAKE_BUILD_TYPE=Release
         cmake —build .
     - name: Linux - ${{ matrix.qt_version }} - Generating AppImage
       if: matrix.platform == 'ubuntu-16.04'
@@ -50,6 +50,7 @@ jobs:
         wget https://github.com/probonopd/linuxdeployqt/releases/download/6/linuxdeployqt-6-x86_64.AppImage
         chmod +x ./linuxdeployqt-6-x86_64.AppImage
         ./linuxdeployqt-6-x86_64.AppImage --appimage-extract
+        mkdir AppDir
         cd AppDir
         wget -c https://github.com/darealshinji/AppImageKit-checkrt/releases/download/continuous/AppRun-patched-x86_64 -O AppRun
         chmod a+x AppRun
