--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
             arch: x86
           - platform: macos-latest
             arch: x86
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.platform }}
     steps:
     - name: Checking out sources
       uses: actions/checkout@master
