--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,4 +72,4 @@ jobs:
         uses: actions/upload-artifact@master
         with:
           name: Notepanda-${{ github.sha }}.linux-${{ matrix.arch }}.qt${{ matrix.qt_version }}.AppImage
-          path: build/Qv2ray.AppImage
+          path: build/Notepanda.AppImage
