--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,10 +13,12 @@ jobs:
         include: 
           - platform: windows-latest
             arch: x86
-            qtarch: win32_msvc2017
+            qtarch: win32_msvc2015
+            cmakearch: Win32
           - platform: windows-latest
             arch: x64
-            qtarch: win64_msvc2017_64
+            qtarch: win64_msvc2015_64
+            cmakearch: x64
         exclude:
           - platform: ubuntu-16.04
             arch: x86
@@ -97,7 +99,7 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake .. -DCMAKE_BUILD_TYPE=Release
+          cmake .. -DCMAKE_BUILD_TYPE=Release -A ${{ matrix.cmakearch }}
           cmake --build .
           cmake --install .
           cd Debug
