--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,11 +13,11 @@ jobs:
         include: 
           - platform: windows-latest
             arch: x86
-            qtarch: win32_msvc2015
+            qtarch: win32_msvc2017
             cmakearch: Win32
           - platform: windows-latest
             arch: x64
-            qtarch: win64_msvc2015_64
+            qtarch: win64_msvc2017_64
             cmakearch: x64
         exclude:
           - platform: ubuntu-16.04
@@ -115,5 +115,5 @@ jobs:
         if: matrix.platform == 'windows-latest'
         uses: actions/upload-artifact@master
         with:
-          name: Qv2ray-${{ github.sha }}.Windows-${{ matrix.arch }}.qt${{ matrix.qt_version }}.7z
+          name: Notepanda-${{ github.sha }}.Windows-${{ matrix.arch }}.qt${{ matrix.qt_version }}.7z
           path: release.7z          
