--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,69 +1,118 @@
 name: Build CI
 
-on:
-  push:
-    branches: [ master, fucking-cmake ]
+on: [push, pull_request]
+
 jobs:
   build:
     strategy:
       matrix:
         qt_version: [5.14.2]
-        platform: [ubuntu-16.04, macos-latestt]
+        platform: [ubuntu-16.04, windows-latest]
         arch: [x86, x64]
+        include:
+          - platform: windows-latest
+            arch: x86
+            qtarch: win32_msvc2017
+            cmakearch: Win32
+          - platform: windows-latest
+            arch: x64
+            qtarch: win64_msvc2017_64
+            cmakearch: x64
         exclude:
           - platform: ubuntu-16.04
             arch: x86
-          - platform: macos-latest
-            arch: x86
-    runs-on: ubuntu-latest
+      fail-fast: false
+    runs-on: ${{ matrix.platform }}
     steps:
-    - name: Cache Qt
-      id: cache-qt
-      uses: actions/cache@v1
-      with:
-        path: ../Qt
-        key: QtCache-${{ matrix.platform }}-${{ matrix.arch }}-${{ matrix.qt_version }}
-    - name: Installing Qt - ${{ matrix.arch }}
-      uses: jurplel/install-qt-action@v2.5.0
-      with:
-        version: ${{ matrix.qt_version }}
-        arch: ${{ matrix.qtarch }}
-        mirror: 'http://mirrors.ocf.berkeley.edu/qt/'
-        cached: ${{ steps.cache-qt.outputs.cache-hit }}
-    - name: Linux - ${{ matrix.qt_version }} - Generate Dependencies and Build
-      if: matrix.platform == 'ubuntu-16.04'
-      shell: bash
-      env:
-        CC: /usr/bin/gcc-9
-        CXX: /usr/bin/g++-9
-      run: |
-        mkdir build
-        cd build
-        cmake .. -DCMAKE_BUILD_TYPE=Release
-        cmake —build .
-    - name: Linux - ${{ matrix.qt_version }} - Generating AppImage
-      if: matrix.platform == 'ubuntu-16.04'
-      run: | 
-        cd build
-        wget https://github.com/probonopd/linuxdeployqt/releases/download/6/linuxdeployqt-6-x86_64.AppImage
-        chmod +x ./linuxdeployqt-6-x86_64.AppImage
-        ./linuxdeployqt-6-x86_64.AppImage --appimage-extract
-        cd AppDir
-        wget -c https://github.com/darealshinji/AppImageKit-checkrt/releases/download/continuous/AppRun-patched-x86_64 -O AppRun
-        chmod a+x AppRun
-        mkdir -p ./usr/{lib,optional}/
-        wget -c https://github.com/darealshinji/AppImageKit-checkrt/releases/download/continuous/exec-x86_64.so -O ./usr/optional/exec.so
-        mkdir -p ./usr/optional/libstdc++/
-        cp -fv /usr/lib/x86_64-linux-gnu/libstdc++.so.6 ./usr/optional/libstdc++/
-        mkdir -p ./usr/optional/libgcc_s/
-        cp -fv /lib/x86_64-linux-gnu/libgcc_s.so.1 ./usr/optional/libgcc_s/
-        cp -fv /usr/lib/x86_64-linux-gnu/{libssl.so.1.1,libcrypto.so.1.1} ./usr/lib/
-        cd ..
-        squashfs-root/AppRun AppDir/usr/share/applications/qv2ray.desktop -appimage -no-strip -always-overwrite
-        mv ./Notepanda*.AppImage ./Notepanda.AppImage
-    - name: Linux - ${{ matrix.qt_version }} - Uploading artifact
-      if: matrix.platform == 'ubuntu-16.04'
-      uses: actions/upload-artifact@master
-      with:
-        name: Notepanda-${{ github.sha }}.linux-${{ matrix.arch }}.qt${{ matrix.qt_version }}.AppImage
-        path: build/Qv2ray.AppImage
+      - name: Checking out sources
+        uses: actions/checkout@master
+
+      - name: Install MSVC compiler
+        if: matrix.platform == 'windows-latest'
+        uses: ilammy/msvc-dev-cmd@v1
+        with:
+          # 14.1 is for vs2017, 14.2 is vs2019, following the upstream vcpkg build from Qv2ray-deps repo
+          toolset: 14.2
+          arch: ${{ matrix.arch }}
+      # Install & Cache Qt---------------------------------------
+      - name: Cache Qt
+        id: cache-qt
+        uses: actions/cache@v1
+        with:
+          path: ../Qt
+          key: QtCache-${{ matrix.platform }}-${{ matrix.arch }}-${{ matrix.qt_version }}
+      - name: Installing Qt - ${{ matrix.arch }}
+        uses: jurplel/install-qt-action@v2.5.0
+        with:
+          version: ${{ matrix.qt_version }}
+          arch: ${{ matrix.qtarch }}
+          mirror: "http://mirrors.ocf.berkeley.edu/qt/"
+          cached: ${{ steps.cache-qt.outputs.cache-hit }}
+      # Linux------------------------------------------
+      - name: Linux - ${{ matrix.qt_version }} - Generate Dependencies and Build
+        if: matrix.platform == 'ubuntu-16.04'
+        shell: bash
+        env:
+          CC: /usr/bin/gcc-9
+          CXX: /usr/bin/g++-9
+        run: |
+          sudo apt install libgl-dev libx11-dev libxkbcommon-x11-dev
+          mkdir build
+          cd build
+          cmake .. -DCMAKE_INSTALL_PREFIX=./AppDir/usr -DCMAKE_BUILD_TYPE=Release
+          cmake --build .
+          cmake --install .
+      - name: Linux - ${{ matrix.qt_version }} - Generating AppImage
+        if: matrix.platform == 'ubuntu-16.04'
+        run: |
+          cd build
+          wget https://github.com/probonopd/linuxdeployqt/releases/download/6/linuxdeployqt-6-x86_64.AppImage
+          chmod +x ./linuxdeployqt-6-x86_64.AppImage
+          ./linuxdeployqt-6-x86_64.AppImage --appimage-extract
+          cd AppDir
+          wget -c https://github.com/darealshinji/AppImageKit-checkrt/releases/download/continuous/AppRun-patched-x86_64 -O AppRun
+          chmod a+x AppRun
+          mkdir -p ./usr/{lib,optional}/
+          wget -c https://github.com/darealshinji/AppImageKit-checkrt/releases/download/continuous/exec-x86_64.so -O ./usr/optional/exec.so
+          mkdir -p ./usr/optional/libstdc++/
+          cp -fv /usr/lib/x86_64-linux-gnu/libstdc++.so.6 ./usr/optional/libstdc++/
+          mkdir -p ./usr/optional/libgcc_s/
+          cp -fv /lib/x86_64-linux-gnu/libgcc_s.so.1 ./usr/optional/libgcc_s/
+          cp -fv /usr/lib/x86_64-linux-gnu/{libssl.so.1.1,libcrypto.so.1.1} ./usr/lib/
+          cd ..
+          squashfs-root/AppRun AppDir/usr/share/applications/notepanda.desktop -appimage -no-strip -always-overwrite
+          mv ./Notepanda*.AppImage ./Notepanda.AppImage
+      - name: Linux - ${{ matrix.qt_version }} - Uploading artifact
+        if: matrix.platform == 'ubuntu-16.04'
+        uses: actions/upload-artifact@master
+        with:
+          name: Notepanda-${{ github.sha }}.linux-${{ matrix.arch }}.qt${{ matrix.qt_version }}.AppImage
+          path: build/Notepanda.AppImage
+      # Windows----------------------------------------------------------------------
+      - name: Windows - ${{ matrix.qt_version }} - Generate Dependencies and Build
+        shell: bash
+        if: matrix.platform == 'windows-latest'
+        env:
+          CC: cl.exe
+          CXX: cl.exe
+        run: |
+          mkdir build
+          cd build
+          cmake .. -DCMAKE_BUILD_TYPE=Release -A ${{ matrix.cmakearch }}
+          cmake --build .
+          cmake --install .
+          cd Debug
+          windeployqt notepanda.exe
+      # --------------------------------------------------------
+      - name: Win-${{ matrix.arch }} - ${{ matrix.qt_version }} - Create 7z Release
+        if: matrix.platform == 'windows-latest'
+        uses: DuckSoft/create-7z-action@v1.0
+        with:
+          pathSource: ./build/Debug/
+          pathTarget: ./release.7z
+      - name: Win-${{ matrix.arch }} - ${{ matrix.qt_version }} - Uploading artifact
+        if: matrix.platform == 'windows-latest'
+        uses: actions/upload-artifact@master
+        with:
+          name: Notepanda-${{ github.sha }}.Windows-${{ matrix.arch }}.qt${{ matrix.qt_version }}.7z
+          path: release.7z
