--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,20 +7,9 @@ jobs:
     strategy:
       matrix:
         qt_version: [5.14.2]
-        platform: [ubuntu-16.04, macos-latest, windows-latest]
+        platform: [macos-latest]
         arch: [x86, x64]
         include:
-          - platform: windows-latest
-            arch: x86
-            qtarch: win32_msvc2017
-            cmakearch: Win32
-          - platform: windows-latest
-            arch: x64
-            qtarch: win64_msvc2017_64
-            cmakearch: x64
-        exclude:
-          - platform: ubuntu-16.04
-            arch: x86
           - platform: macos-latest
             arch: x86
       fail-fast: false
@@ -106,12 +95,6 @@ jobs:
           cd Debug
           windeployqt notepanda.exe
       #---------------------------------------------------------
-      - uses: actions/setup-node@v1
-        if: matrix.platform == 'macos-latest'
-        with:
-          node-version: '10.x'
-      - run: npm install -g appdmg
-        if: matrix.platform == 'macos-latest'
       - name: macOS - ${{ matrix.qt_version }} - Generate Dependencies and Build
         shell: bash
         if: matrix.platform == 'macos-latest'
@@ -121,15 +104,17 @@ jobs:
           cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_OSX_DEPLOYMENT_TARGET=10.13 -DDS_STORE_SCRIPT=ON
           cmake --build . 
           sudo cmake --install .
-          cd Debug
-          macdeployqt Notepanda.app -dmg
-# --------------------------------------------------------
+          brew install tree
+          tree .
+          macdeployqt notepanda.app -dmg
+          tree .
+      # --------------------------------------------------------
       - name: macOS - ${{ matrix.qt_version }} - Uploading Artifact
         if: matrix.platform == 'macos-latest'
         uses: actions/upload-artifact@master
         with:
           name: Notepanda-${{ github.sha }}.macOS-${{ matrix.arch }}.qt${{ matrix.qt_version }}.dmg
-          path: Notepanda.dmg          
+          path: build/notepanda.dmg
       # --------------------------------------------------------
       - name: Win-${{ matrix.arch }} - ${{ matrix.qt_version }} - Create 7z Release
         if: matrix.platform == 'windows-latest'
