--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,9 +7,20 @@ jobs:
     strategy:
       matrix:
         qt_version: [5.14.2]
-        platform: [macos-latest]
+        platform: [ubuntu-16.04, macos-latest, windows-latest]
         arch: [x86, x64]
         include:
+          - platform: windows-latest
+            arch: x86
+            qtarch: win32_msvc2017
+            cmakearch: Win32
+          - platform: windows-latest
+            arch: x64
+            qtarch: win64_msvc2017_64
+            cmakearch: x64
+        exclude:
+          - platform: ubuntu-16.04
+            arch: x86
           - platform: macos-latest
             arch: x86
       fail-fast: false
