--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,8 @@ jobs:
     steps:
       - name: Checking out sources
         uses: actions/checkout@master
-
+        with:
+          submodules: 'recursive'
       - name: Install MSVC compiler
         if: matrix.platform == 'windows-latest'
         uses: ilammy/msvc-dev-cmd@v1
