--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,8 +46,8 @@ message("| Welcome to contribute!                          |")
 message("|-------------------------------------------------|")
 message(" ")
 
-include_directories(src/3rdparty/syntax-highlighting)
-include_directories(src/3rdparty/extra-cmake-modules)
+add_subdirectory(src/3rdparty/syntax-highlighting)
+add_subdirectory(src/3rdparty/extra-cmake-modules)
 
 find_package(Qt5 COMPONENTS Widgets Svg REQUIRED)
 find_package(KF5SyntaxHighlighting)
