feat: add settings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,10 @@ set(SOURCES
     src/ui/preferenceswindow.cpp
     src/ui/preferenceswindow.h
     src/ui/preferenceswindow.ui
+    src/core/configmanager.cpp
+    src/core/configmanager.h
+    src/core/settings.cpp
+    src/core/settings.h
     src/core/texteditor.cpp
     src/core/texteditor.h
     assets/notepanda.rc
